--- a/aula02.css
+++ b/aula02.css
@@ -3,19 +3,28 @@
   font-size: 16px; /* 1rem = 16px */
   font-family: Arial, sans-serif;
   margin: 0;
-  background-color: #f2f2f2;
+  
   margin: 0;
-  padding: ;
+  padding: 0;
 }
 
 
 /* Cabeçalho */
 .cabecalho {
   background-color: #0077b6;
-  color: white;
+  color: rgb(4, 4, 4);
   text-align: center;
   padding: 1.5rem; /* Usa rem para manter proporção */
 }
+
+.batman {
+    padding: 20rem;
+    background-image: url(imagens/bridge-9620082_1280.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 
 /* Container principal com Flexbox */
 .container {
