--- a/teste.css
+++ b/teste.css
@@ -88,7 +88,7 @@ span:hover {
 }
 
 .div-batman {
-    background-image: url(imagens/ai-generated-8795619_1280.jpg);
+    background-image: url();
     background-size: cover;
     background-position: center;
     
